// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItemInfo component should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomWidth": 1,
      "borderColor": "#D0D3D4",
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingBottom": 16,
      }
    }
  >
    <Image
      height={75}
      source="http://s2.img-b.com/imagebase/resized/330x320/geimages/ge-pwe23kmdes-1.jpg"
      width={75}
    />
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <Text
        weight="bold"
      >
        GE PWE23K
      </Text>
      <Text
        lineHeight={false}
        size="small"
      >
        Color/Finish: 
        Slate
      </Text>
      <Text
        size="small"
      >
        (Qty 
        1
        ) 
        $2,599.00
      </Text>
    </View>
  </View>
</View>
`;

exports[`CartItemInfo component should render when there is an error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderBottomWidth": 1,
      "borderColor": "#D0D3D4",
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingBottom": 16,
      }
    }
  >
    <Image
      height={75}
      source="http://s2.img-b.com/imagebase/resized/330x320/geimages/ge-pwe23kmdes-1.jpg"
      width={75}
    />
    <View
      style={
        Object {
          "flex": 1,
          "marginLeft": 16,
        }
      }
    >
      <Text
        weight="bold"
      >
        GE PWE23K
      </Text>
      <Text
        lineHeight={false}
        size="small"
      >
        Color/Finish: 
        Slate
      </Text>
      <Text
        size="small"
      >
        (Qty 
        1
        ) 
        $2,599.00
      </Text>
      <Text
        color="error"
        lineHeight={false}
        size="small"
      >
        Test Error
      </Text>
    </View>
  </View>
</View>
`;
